<resources>
    <string name="app_name">Olimplicacion</string>
    <string name="client_id">911533527631-em4u3kon7ad0h5if0up5vfulmu0o71rq.apps.googleusercontent.com</string>
    <string name="ejercicioNombre">Nombre de ejercicio</string>
    <string name="goblet_squat">Goblet Squat</string>
    <string name="goblet_squatM">Músculos trabajados: Cuádriceps, gemelos, glúteos, abdominales,
        brazos y fuerza de agarre.</string>
    <string name="goblet_squatC">Cómo: Ponte de pie con los pies más abiertos que la anchura de los
        hombros y sujeta una mancuerna con ambas manos delante del pecho. Vuelve a sentarte en
        cuclillas, luego vuelve a subir y repite.</string>
    <string name="press_arnold">Press Arnold</string>
    <string name="press_arnoldM">Músculos trabajados: Deltoides, tríceps y trapecios.</string>
    <string name="press_arnoldC">Cómo: Siéntate en un banco con las mancuernas frente a ti, con las palmas de las manos hacia los hombros, como si acabaras de hacer un curl de bíceps. Empuja las mancuernas por encima de tu cabeza mientras giras los brazos hasta que las palmas de las manos queden en dirección contraria a ti. Endereza los brazos, haz una pausa y luego invierte el movimiento.</string>
    <string name="levantamiento_a_dos_tiempos">Levantamiento a dos tiempos</string>
    <string name="levantamiento_a_dos_tiemposM">Músculos trabajados: Glúteos, gemelos, cuádriceps, bíceps.</string>
    <string name="levantamiento_a_dos_tiemposC">Cómo: Gira las muñecas para que miren hacia delante y lleva las pesas a los hombros, saltando ligeramente al hacerlo. Endereza lentamente las piernas hasta ponerte de pie. A continuación, baja las pesas hasta el muslo antes de pasar a la posición de sentadilla y repetir.</string>
    <string name="renegade_row">Renegade Row</string>
    <string name="renegade_rowM">Músculos trabajados: Dorsales, romboides, delantales, abdominales, oblicuos, bíceps, tríceps, antebrazos.</string>
    <string name="renegade_rowC">Cómo: Colócate en posición de press-up con las manos en las asas de dos mancuernas. Manteniendo el núcleo tenso, rema la mancuerna derecha hasta los abdominales y vuelve a la posición inicial. Repite con la mancuerna izquierda para completar una repetición.</string>
    <string name="paseo_del_granjero">Paseo del granjero</string>
    <string name="paseo_del_granjeroM">Músculos trabajados: Espalda superior, hombros, tríceps y bíceps, antebrazos, abdominales, glúteos, isquiotibiales, cuádriceps, aductores, abductores y gemelos.</string>
    <string name="paseo_del_granjeroC">Cómo: Camina hacia delante dando pasos cortos y rápidos. Recorre la distancia indicada, lo más rápido posible.</string>
    <string name="apertura_con_mancuernas">Apertura con mancuernas</string>
    <string name="apertura_con_mancuernasM">Músculos trabajados: Deltoides, pectorales, romboides,
        serrato anterior, manguitos rotadores, bíceps.</string>
    <string name="apertura_con_mancuernasC">Cómo: Túmbate en un banco plano sujetando dos mancuernas
        a la altura de los hombros con las palmas hacia dentro. Presiona las mancuernas hacia arriba
        hasta que tus brazos estén casi completamente extendidos. Esta es la posición inicial. Desde
        aquí, con una ligera flexión de los brazos, arquea las pesas hacia los lados hasta que
        sientas un estiramiento en el pecho. Aprieta los pectorales para devolver las pesas a la
        posición inicial invirtiendo el movimiento.</string>
    <string name="remo_inclinado">Remo inclinado</string>
    <string name="remo_inclinadoM">Músculos trabajados: Dorsales, hombros, antebrazos, bíceps,
        erectores espinales, isquiotibiales, glúteos.</string>
    <string name="remo_inclinadoC">Cómo: Mantén el tronco apretado y la espalda recta mientras
        remas las pesas hasta el pecho. Baja y repite.</string>
    <string name="uppercut_con_mancuernas">Uppercut con mancuernas</string>
    <string name="uppercut_con_mancuernasM">Músculos trabajados: Bíceps, oblicuos, abdominales, glúteos y cuádriceps.</string>
    <string name="uppercut_con_mancuernasC">Cómo: De pie, sujeta dos mancuernas a la altura de los hombros con un agarre por debajo de la mano. Adopta una postura de lucha y da un puñetazo hacia arriba con el brazo derecho, girando sobre el pie derecho al hacerlo. Vuelve a la posición inicial y repite en el otro lado.</string>
    <string name="peso_muerto_con_mancuernas_a_dos_brazos_con_piernas_rigidas">Peso muerto con mancuernas a dos brazos con piernas rígidas</string>
    <string name="peso_muerto_con_mancuernas_a_dos_brazos_con_piernas_rigidasM">Músculos trabajados: Isquiotibiales, erectores, dorsales y glúteos.</string>
    <string name="peso_muerto_con_mancuernas_a_dos_brazos_con_piernas_rigidasC">Cómo: Baja las mancuernas hasta la parte superior de los pies, hasta donde puedas llegar extendiendo la cintura, y luego vuelve lentamente a la posición inicial.</string>
    <string name="kickbacks_con_mancuernas">Kickbacks con mancuernas</string>
    <string name="kickbacks_con_mancuernasM">Músculos trabajados: Tríceps.</string>
    <string name="kickbacks_con_mancuernasC">Cómo: Sostén una mancuerna con la mano derecha y coloca la rodilla y la mano izquierda sobre un banco. Comienza con el brazo doblado, llevando la mancuerna junto al pecho de forma que la parte superior del brazo quede paralela al suelo, y estira el brazo hacia atrás utilizando el antebrazo. Vuelve lentamente a la posición inicial y repite.</string>
    <string name="swing_con_un_brazo">Swing con un brazo</string>
    <string name="swing_con_un_brazoM">Músculos trabajados: Glúteos e isquiotibiales, abdominales, cuádriceps, hombros.</string>
    <string name="swing_con_un_brazoC">Cómo: Ponte en cuclillas y balancea la mancuerna con las piernas antes de impulsarte inmediatamente hacia delante, llevando el peso hacia la cabeza mientras enderezas las piernas. Repite este movimiento y luego cambia de lado.</string>
    <string name="press_de_banca_con_mancuernas">Press de banca con mancuernas</string>
    <string name="press_de_banca_con_mancuernasM">Músculos trabajados: Pectorales, hombros, tríceps, antebrazos, dorsales, trapecios, romboides.</string>
    <string name="press_de_banca_con_mancuernasC">Cómo: Túmbate en un banco plano sujetando dos mancuernas sobre el pecho con un agarre por encima de la mano. Empuja hacia arriba hasta que los brazos estén rectos y luego baja con control.</string>
    <string name="press_de_hombros_con_mancuernas">Press de hombros con mancuernas</string>
    <string name="press_de_hombros_con_mancuernasM">Músculos trabajados: Deltoides, trapecios, tríceps, pectorales, core.</string>
    <string name="press_de_hombros_con_mancuernasC">Cómo: Coloca los pies separados a la altura de los hombros y sujeta dos mancuernas a la altura de los hombros con un agarre por encima de la mano. Presiona las pesas por encima de tu cabeza hasta que tus brazos estén completamente extendidos. Vuelve lentamente a la posición inicial.</string>
    <string name="curl_martillo_de_biceps_cruzado">Curl martillo de bíceps cruzado</string>
    <string name="curl_martillo_de_biceps_cruzadoM">Músculos trabajados: Bíceps, braquial, antebrazos.</string>
    <string name="curl_martillo_de_biceps_cruzadoC">Cómo: De uno en uno, eleva cada pesa hacia el hombro contrario. Vuelve bajo control a la posición inicial y repita del otro lado.</string>
    <string name="remo_vertical_con_mancuernas">Remo vertical con mancuernas</string>
    <string name="remo_vertical_con_mancuernasM">Músculos trabajados: Delgados, trapecios, romboides y bíceps.</string>
    <string name="remo_vertical_con_mancuernasC">Cómo: sujeta una mancuerna con una mano delante del cuerpo con un agarre por encima de la mano. Levante el codo hacia arriba y hacia el lado utilizando los músculos de los hombros para elevar la pesa hacia la barbilla. Baje bajo control hasta la posición inicial.</string>
    <string name="step_ups">Step-ups</string>
    <string name="step_upsM">Músculos trabajados: Cuádriceps, isquiotibiales, glúteos, core.</string>
    <string name="step_upsC">Cómo: Coloca el pie derecho en la plataforma elevada y empuja con el talón para levantarte y colocar el pie izquierdo en la plataforma. Vuelve a bajar con el pie izquierdo, concentrándote en flexionar la cadera y la rodilla de la pierna derecha. Repite en el otro lado.</string>
    <string name="spider_curl_con_mancuernas">Spider Curl con mancuernas</string>
    <string name="spider_curl_con_mancuernasM">Músculos trabajados: Bíceps, tríceps.</string>
    <string name="spider_curl_con_mancuernasC">Cómo: Túmbate en un banco inclinado y sostén una mancuerna en cada mano, dejándolas colgar por debajo de los hombros. Utiliza los bíceps para levantar las mancuernas hacia los hombros. Vuelve lentamente a la posición inicial y repite.</string>
    <string name="elevacion_con_mancuernas">Elevación con mancuernas</string>
    <string name="elevacion_con_mancuernasM">Músculos trabajados: Espalda, hombros.</string>
    <string name="elevacion_con_mancuernasC">Cómo: Arquea las pesas hacia los lados manteniendo los brazos rectos en todo momento hasta que sientas un fuerte estiramiento en los hombros. Vuelve lentamente a la posición inicial.</string>
    <string name="aperturas_con_mancuernas_con_brazos_flexionados">Aperturas con mancuernas con brazos flexionados</string>
    <string name="aperturas_con_mancuernas_con_brazos_flexionadosM">Músculos trabajados: Dorsales, hombros, tríceps, pectorales, serrato anterior.</string>
    <string name="aperturas_con_mancuernas_con_brazos_flexionadosC">Cómo: Túmbate en un banco plano. Sujeta la mancuerna con ambas manos por encima de ti con los brazos ligeramente flexionados. Manteniendo los brazos flexionados, arquea la pesa por detrás de la cabeza y luego vuelve lentamente a la posición inicial.</string>
    <string name="zancadas_con_mancuernas">Zancadas con mancuernas</string>
    <string name="zancadas_con_mancuernasM">Músculos trabajados: Pantorrillas, abdominales y espalda baja.</string>
    <string name="zancadas_con_mancuernasC">Cómo: De pie, con las mancuernas a los lados y las palmas de las manos hacia el cuerpo. Avanza todo lo que puedas con la pierna derecha, doblando la rodilla de atrás hasta que casi roce el suelo. Utiliza el talón del pie derecho para empujar la parte superior del cuerpo hasta la posición inicial. Repite la operación con la pierna contraria.</string>
    <string name="levantamiento_de_peso_muerto_con_mancuernas_a_una_pierna">Levantamiento de peso muerto con mancuernas a una pierna</string>
    <string name="levantamiento_de_peso_muerto_con_mancuernas_a_una_piernaM">Músculos trabajados: Isquiotibiales, glúteos, tobillos y core.</string>
    <string name="levantamiento_de_peso_muerto_con_mancuernas_a_una_piernaC">Cómo: Sujeta dos mancuernas delante de los muslos, con las palmas hacia dentro. Levanta lentamente una pierna por detrás, doblando ligeramente la otra, e inclínate hacia delante para que tus brazos bajen las mancuernas hacia el suelo. Haz una pausa y vuelve a la posición vertical.</string>
    <string name="elevacion_de_hombros_con_una_sola_mancuerna">Elevación de hombros con una sola mancuerna</string>
    <string name="elevacion_de_hombros_con_una_sola_mancuernaM">Músculos trabajados: Deltoides, tríceps, trapecios, parte superior del pecho.</string>
    <string name="peso">Peso :</string>
    <string name="repeticiones">Repeticiones :</string>
    <string name="modificar">Modificar</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="descripcionEjercicio">Imagen que muestra cómo se hace el ejercicio.</string>
    <string name="espacio">" "</string>
    <string name="cancelar">Cancelar</string>
    <string name="acepBtn">Aceptar</string>
</resources>