<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailedActivity02">
    <Button
        android:id="@+id/button"
        android:labelFor="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_arrow_back_24"
        android:text="@string/ejercicios"
        android:textColor="@color/white"
        android:background="@color/grey"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:id="@+id/detailName"
                android:layout_marginTop="14dp"
                android:text="@string/apertura_con_mancuernas"
                android:textSize="24sp"
                android:textColor="@color/darkgrey"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"/>

            <androidx.cardview.widget.CardView
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:id="@+id/cardImage"
                android:layout_gravity="center"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp">
                <ImageView
                    android:contentDescription="@string/descripcionEjercicio"
                    android:layout_width="380dp"
                    android:layout_height="200dp"
                    android:id="@+id/detailImage"
                    android:layout_gravity="center"
                    android:src="@drawable/apertura_con_mancuernas"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detailMusculos"
                android:textColor="@color/darkgrey"
                android:text="@string/apertura_con_mancuernasM"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detailDesc"
                android:textColor="@color/darkgrey"
                android:text="@string/apertura_con_mancuernasC"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:textSize="24sp"/>
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>




</LinearLayout>